# sdd-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  npm-publish.yml  pypi-publish.yml
.proofkit/: constitution.md  protocol.md  state.json
.proofkit/adapters/: gemini-cli.json  github-copilot.json  qwen-code.json
.proofkit/agents/: explorer.md
.proofkit/examples/standard-verified-change/: delta-spec.md  proposal.md  tasks.md
.proofkit/memory/: decisions.md  project.md
.proofkit/profiles/: enterprise.md  quick.md  standard.md
.proofkit/schemas/: artifact.schema.json  extension.schema.json
.proofkit/skills/: critique.md  design.md  sync-specs.md
.runproof/: constitution.md  protocol.md
.runproof/adapters/: claude-code.json  codex.json  cursor.json  gemini-cli.json  generic-markdown.json  github-copilot.json  opencode.json  qwen-code.json
.runproof/agents/: planner.md
.runproof/examples/standard-verified-change/: verification.md
.runproof/schemas/: adapter-capabilities.schema.json  agent.schema.json  artifact.schema.json  extension.schema.json  phase-result.schema.json  skill.schema.json  verification.schema.json
.runproof/skills/: implement.md  propose.md  specify.md
.sdd/: protocol.md
.sdd/adapters/: codex.json  cursor.json
.sdd/agents/: architect.md  archivist.md  implementer.md  verifier.md
.sdd/examples/standard-verified-change/: archive.md  design.md
.sdd/schemas/: skill.schema.json  verification.schema.json
.sdd/skills/: task.md
demo/: .gitignore  README.md
demo/broken-app/: package.json  test.js
demo/scripts/: run-demo.ps1  run-demo.sh
docs/: adapter-authoring-v0.1.md  adapter-contract-v0.1.md  adapters-v0.1.md  production-readiness-v0.1.md  runproof-protocol-v0.1.md  sdd-core-protocol-v0.1.md  sdd-validator-v0.1.md
docs/superpowers/plans/: 2026-05-03-sdd-core-foundation.md  2026-05-03-v0.1-closure-record.md  2026-05-03-v0.1-closure-week.md  2026-05-07-proofkit-demo.md  2026-05-08-runproof-rebranding-slash-commands.md
docs/superpowers/specs/: 2026-05-08-proofkit-ux-slash-commands-design.md
proofkit/: _extensions.py  _render.py  _render_auto.py  _types.py  _wf_changeops.py  _wf_discovery.py  _wf_engine.py  _wf_evidence.py  _wf_inference.py  _wf_registry.py  _wf_templates.py  _wf_validation.py  cli.py
runproof/: __init__.py  _dispatch.py  _extensions.py  _render.py  _render_auto.py  _types.py  _wf_changeops.py  _wf_discovery.py  _wf_engine.py  _wf_evidence.py  _wf_inference.py  _wf_registry.py  _wf_templates.py  _wf_validation.py  _workflow.py  cli.py
runproof/templates/commands/: sdd-design.md  sdd-propose.md  sdd-specify.md  sdd-status.md  sdd-tasks.md  sdd-verify.md
scripts/: insert_0_8_helpers.py  release_check.py  sdd.py
ssd_core/: __init__.py  _render.py  _types.py  _wf_engine.py  _wf_evidence.py  _wf_inference.py  _wf_registry.py  _wf_validation.py  _workflow.py  cli.py
tests/: test_contracts.py  test_core.py  test_execution_evidence.py  test_features.py  test_golden.py  test_inference.py  test_sdd.py  test_verify.py  test_workflow.py
(+44 files in other folders)
