[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssd-core"
version = "0.12.0"
description = "AI development governance engine — prevent hallucinated completion and vanishing intent in agent-assisted software teams."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "SSD-Core contributors" }
]
keywords = ["sdd", "spec-driven-development", "agents", "ai", "workflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
ssd-core = "ssd_core.cli:main"

[tool.setuptools.packages.find]
include = ["ssd_core*"]

[tool.setuptools.package-data]
ssd_core = ["templates/**/*"]
