[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proofkit-cli"
version = "0.27.0"
description = "AI development governance engine — prevent hallucinated completion and vanishing intent in agent-assisted software teams."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ProofKit contributors" }
]
keywords = ["sdd", "spec-driven-development", "agents", "ai", "workflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
proofkit = "proofkit.cli:main"

[tool.setuptools.packages.find]
include = ["proofkit*"]

[tool.setuptools.package-data]
proofkit = ["templates/**/*"]
