[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "runproof-cli"
version = "0.27.0"
description = "AI development governance engine — prevent hallucinated completion and vanishing intent in agent-assisted software teams."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "RunProof contributors" }
]
keywords = ["runproof", "spec-driven-development", "agents", "ai", "workflow", "governance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
runproof = "runproof.cli:main"

[tool.setuptools.packages.find]
include = ["runproof*"]

[tool.setuptools.package-data]
runproof = ["templates/**/*"]
